feat(mcp): add lathe-mcp-server exposing get_diagnostics and get_definition
New in-repo module lathe-mcp-server that serves Lathe's code intelligence to AI
coding agents (Claude Code, Codex CLI, Gemini CLI) over the Model Context
Protocol, built on the official MCP Java SDK and calling lathe-server in-process
via LatheEngine.

- LatheMcpServer resolves the reactor root from the working directory (walking up
  to .lathe/, with a clean remediation message if absent) and serves
  get_diagnostics and get_definition over the SDK stdio transport — one process
  per agent session.
- LatheMcpTools maps engine results to CallToolResult (text + structuredContent),
  turns bad input or an engine failure into an isError result, and logs the full
  stacktrace to stderr (stdout is the protocol channel).
- Runs on the classpath, not the module path: SDK 2.0.1 ships an invalid
  hyphenated Automatic-Module-Name, and lathe-server's module-info is ignored on
  the classpath so the in-process javac runs as unnamed-module code.
- ServerInstaller now also generates lathe-mcp-launcher.sh (classpath launcher,
  javac --add-exports/--add-opens targeting ALL-UNNAMED), sharing the javac flag
  set and the write-launcher logic with the editor launcher.
- dev/mcp.py stdio driver (analog of dev/lsp.py) and McpSmokeTest in the
  multi-module invoker fixture drive the real launcher end-to-end, retiring the
  classpath-launcher and in-process-javac-as-unnamed-module risks.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>